@@ -8,9 +8,14 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+
+
 2017-01-23 niel
 	Mrg: PR 2364, from krabsheva - Fixes typo in ProcessAdditional.php which prevented timeout
 		setting being used correctly.
+	Mrg: PR 2365, from krabsheva - Adds reaese_groups table to resetdb.php
+	Chg: .../misc/testing/DB/resetdb.php now uses loop_cbpm() stored procedure to truncate some
+		tables.
 2017-01-22 niel
 	Fix: Bad settings data for yydecodepath.
 2017-01-20 DariusIII
